# bot

./: .env  .env.example  Cargo.toml  GITIGNORE_ADD.txt  LOGGING_AND_SCORING.env.example  README_LOGGING.md  SHA256SUMS.txt  STATIC_COUNTS.json  VALIDATION.md
src/: logger.rs  main.rs  market_scanner.rs  trading_bot.rs
