[package]
name = "PolyBot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4.45"
dotenvy = "0.15"
futures-util = "0.3"
polymarket_client_sdk_v2 = { version = "0.6", features = ["clob", "heartbeats"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
